--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirim Pesan WhatsApp - OCR</title>
+    <title>Kirim Pesan WhatsApp</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -102,7 +102,7 @@
 <body>
 
 <div class="container">
-    <h1>Kirim Pesan WhatsApp - OCR</h1>
+    <h1>Request CT via Gambar</h1>
     
     <div class="upload-area" onclick="document.getElementById('fileInput').click()">
         <p>Klik atau drag & drop gambar di sini</p>
