--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <button id="upload-button">
                 <span class="camera-icon">&#128247;</span> Pilih Gambar
             </button>
-            <p style="margin-top: 15px; color: #666;">Unggah gambar yang ada nomer idpel dan nomee G, Tunggu proses selesai .</p>
+            <p style="margin-top: 15px; color: #666;">Unggah gambar yang ada nomer idpel dan nomer G, Tunggu proses selesai .</p>
         </div>
 
         <div class="result-area" id="result-area" style="display: none;">
