Fix message formatting in WhatsApp URL

--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@ Keterangan: kwh meter periksa.`;
 
 ID Pelanggan/Nomor Meter : ${messageData.noMeter}
 Nomor gangguan/PK : ${messageData.nomerG}
-Keterangan: kwh meter periksa.
-(Terkirim otomatis saat online)`;
+Keterangan: kwh meter periksa.`;
 
             const encodedMessage = encodeURIComponent(message);
             const whatsappUrl = `https://wa.me/?text=${encodedMessage}`;
